<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <!--<item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_menu_camera"
            android:title="Import" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="Gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="Slideshow" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="Tools" />
            -->
    </group>

    <item android:title="@string/DrawerOptionsTitle">
        <menu>
            <item
                android:id="@+id/action_location"
                android:icon="@drawable/ic_location"
                android:title="@string/DrawerOptionsPlace"/>
            <item
                android:id="@+id/action_favorite_locations"
                android:icon="@drawable/ic_favorite"
                android:title="@string/DrawerOptionsFavoritePlaces"/>
            <item
                android:id="@+id/action_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/DrawerOptionConfig"/>
            <item
                android:id="@+id/action_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/DrawerOptionLogout"/>
        </menu>
    </item>

</menu>
