<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="20dp"
    >

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="50dp">

        <TextView
            android:id="@+id/DialogWhatsTvPhoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/DialogWhatsTvPhoneNumber" />
        <EditText
            android:id="@+id/DialogWhatsEtPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>
    <LinearLayout
        android:paddingTop="20dp"
        android:orientation="horizontal" android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/DialogWhatsTvMessage"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/DialogWhatsTvMessage" />
        <EditText
                android:id="@+id/DialogWhatsEtMessage"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:paddingTop="20dp"
        android:orientation="horizontal" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
    <Button
        android:id="@+id/DialogWhatsBtnAceptar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/DialogWhatsBtnAceptar"/>

    <Button
        android:id="@+id/DialogWhatsBtnCancelar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/DialogWhatsBtnCancelar"/>
    </LinearLayout>
</LinearLayout>