<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.Login"
    android:orientation="vertical"
    android:background="@color/colorBlack"
    android:focusableInTouchMode="true"
    android:focusable="false"
    android:layout_gravity="center">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/btnlogin_shape">
            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:layout_margin="22dp"
                android:text="@string/LoginTittle"
                android:textSize="25dp"
                android:textColor="@color/colorWhite"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="10dp">
                <TextView
                    android:id="@+id/lblUserName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="22dp"
                    android:textSize="20dp"
                    android:text="@string/LoginTVUser"
                    android:textColor="@color/colorWhite"/>
                <EditText
                    android:id="@+id/txtUserName"
                    android:layout_width="match_parent"
                    android:inputType="number"
                    android:layout_marginRight="22dp"
                    android:layout_marginLeft="22dp"
                    android:textColor="@color/colorBlack"
                    android:layout_height="40dp"
                    android:paddingHorizontal="10dp"
                    android:background="@drawable/text_view_shape"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="10dp">
                <TextView
                    android:id="@+id/lblPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="22dp"
                    android:textSize="20dp"
                    android:text="@string/LoginTVPassword"
                    android:textColor="@color/colorWhite"/>
                <EditText
                    android:id="@+id/txtPassword"
                    android:layout_width="match_parent"
                    android:inputType="textPassword"
                    android:layout_marginRight="22dp"
                    android:layout_marginLeft="22dp"
                    android:textColor="@color/colorBlack"
                    android:layout_height="40dp"
                    android:paddingHorizontal="10dp"
                    android:background="@drawable/text_view_shape" />
            </LinearLayout>

            <CheckBox
                android:id="@+id/chkFaceLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/colorBlack"
                android:buttonTint="@color/colorWhite"
                android:gravity="center"
                android:layout_gravity="center"
                android:onClick="TakePhoto"
                android:text="@string/LoginChkFaceDetection"
                android:textColor="@color/colorWhite"
                android:textColorLink="@color/colorPrimary"
                android:textSize="20dp" />
            <Button
                android:id="@+id/btnSend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/LoginBtnLogin"
                android:onClick="Login"
                android:gravity="center"
                android:textColor="@color/colorWhite"
                android:background="@drawable/btnlogin_shape"
                android:layout_marginHorizontal="20dp"/>

                <Button
                    android:id="@+id/btnRegister"
                    android:layout_height="30dp"
                    android:layout_width="wrap_content"
                    android:text="@string/CreateUser"
                    android:textAllCaps="false"
                    android:layout_marginTop="15dp"
                    android:textStyle="bold"
                    android:layout_gravity="right"
                    android:paddingHorizontal="25dp"
                    android:layout_marginHorizontal="20dp"
                    android:onClick="CreateUserRedirection"
                    android:textColor="@color/colorPrimary"
                    android:background="@drawable/text_view_shape"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>