<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.Activity.ChangePassword"
    android:orientation="vertical"
    android:background="@drawable/gray_background"
    android:focusableInTouchMode="true"
    android:focusable="false"
    android:layout_gravity="center">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvCurrentPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="22dp"
                android:textSize="20dp"
                android:text="@string/tvCurrentPassword"
                android:textColor="@color/colorBlack"/>

            <EditText
                android:id="@+id/etCurrentPassword"
                android:layout_width="match_parent"
                android:inputType="textPassword"
                android:maxLength="9"
                android:layout_marginRight="22dp"
                android:layout_marginLeft="22dp"
                android:textColor="@color/colorBlack"
                android:layout_height="40dp"
                android:paddingHorizontal="10dp"
                android:background="@drawable/text_view_shape" />
            <TextView
                android:id="@+id/tvPassword1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="22dp"
                android:textSize="20dp"
                android:text="@string/tvNewPassword"
                android:textColor="@color/colorBlack"/>

            <EditText
                android:id="@+id/etPassword1"
                android:layout_width="match_parent"
                android:inputType="textPassword"
                android:layout_marginRight="22dp"
                android:layout_marginLeft="22dp"
                android:textColor="@color/colorBlack"
                android:layout_height="40dp"
                android:paddingHorizontal="10dp"
                android:background="@drawable/text_view_shape" />
            <TextView
                android:id="@+id/tvPassword2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="22dp"
                android:textSize="20dp"
                android:text="@string/tvConfirmPassword"
                android:textColor="@color/colorBlack"/>

            <EditText
                android:id="@+id/etPassword2"
                android:layout_width="match_parent"
                android:inputType="textPassword"
                android:layout_marginRight="22dp"
                android:layout_marginLeft="22dp"
                android:textColor="@color/colorBlack"
                android:layout_height="40dp"
                android:paddingHorizontal="10dp"
                android:background="@drawable/text_view_shape" />

            <Button
                android:id="@+id/btnChangePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnSettingsSave"
                android:onClick="changePassword"
                android:gravity="center"
                android:enabled="true"
                android:textColor="@color/colorWhite"
                android:background="@drawable/btnlogin_shape"
                android:layout_margin="30dp"
                android:layout_marginHorizontal="20dp"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>